<resources>
    <string name="app_name">Banco de Filmes</string>
    <string name="loading">Carregando..</string>
    <string name="title_name">Nome Completo</string>
    <string name="title_email">E-mail</string>
    <string name="title_password">Senha</string>
    <string name="title_confirm_password">Confirmar senha</string>
    <string name="title_signIn">Cadastrar</string>
    <string name="title_login">Acessar</string>
    <string name="title_new_user_signin">Cadastre-se</string>
    <string name="title_forget_password">Esqueci minha senha</string>
    <string name="title_new_account">Cadastrar Nova Conta</string>
    <string name="title_home">Início</string>
    <string name="title_my_list">Minha Lista</string>
    <string name="title_watched">Assistidos</string>
    <string name="title_settings">Ajustes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_recover_password">Recuperar Senha</string>
    <string name="title_cancel">Cancelar</string>
    <string name="title_send">Enviar</string>
    <string name="title_title">Título</string>
    <string name="title_release_date">Data de lançamento</string>
    <string name="title_language">Idioma</string>
    <string name="title_average">Nota</string>
    <string name="title_popular">Popularidade</string>
    <string name="title_sinopse">Sinopse</string>
    <string name="title_logout">Sair</string>
    <string name="title_save">Salvar</string>
    <string name="title_username">Username</string>
    <string name="title_search">Pesquisar</string>
    <string name="title_statistic">Estatísticas</string>
    <string name="title_favorite">Favotitos</string>
    <string name="desenv">Em Desenvolvimento</string>
    <string name="no_content">Sem conteúdo</string>
    <string name="title_edit_photo">Editar foto</string>
    <string name="title_edit">Editar</string>
</resources>
