<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorAccent"
    android:gravity="center"
    tools:context=".features.signin.SignInActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/movie_icon"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_new_account"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="10sp"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/edt_signIn_fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_name"
                android:inputType="textCapCharacters"
                android:layout_marginTop="30dp"
                app:bootstrapSize="md"
                app:bootstrapBrand="info"
                app:roundedCorners="true"/>

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/edt_signIn_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_email"
                android:inputType="textEmailAddress"
                android:layout_marginTop="10dp"
                app:bootstrapSize="md"
                app:bootstrapBrand="info"
                app:roundedCorners="true"/>

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/edt_signIn_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_password"
                android:inputType="textPassword"
                android:layout_marginTop="10dp"
                app:bootstrapSize="md"
                app:bootstrapBrand="info"
                app:roundedCorners="true"/>

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/edt_signIn_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_confirm_password"
                android:inputType="textPassword"
                android:layout_marginTop="10dp"
                app:bootstrapSize="md"
                app:bootstrapBrand="info"
                app:roundedCorners="true"/>

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/btn_signIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_signIn"
                android:layout_marginTop="30dp"
                app:bootstrapSize="lg"
                app:buttonMode="regular"
                app:showOutline="false"
                app:roundedCorners="true" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/btn_signIn_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_cancel"
                android:layout_marginTop="10dp"
                app:bootstrapBrand="danger"
                app:bootstrapSize="lg"
                app:buttonMode="regular"
                app:showOutline="false"
                app:roundedCorners="true" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>