<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorAccent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".features.login.RecoverPasswordActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/movie_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_recover_password"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="10sp"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/edt_recover_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_email"
                android:inputType="textEmailAddress"
                android:layout_marginTop="30dp"
                app:bootstrapSize="lg"
                app:bootstrapBrand="info"
                app:roundedCorners="true"/>

            <ProgressBar
                android:layout_width="50dp"
                android:layout_height="50dp"
                style="?android:attr/progressBarStyleLarge"
                android:visibility="gone"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:theme="@style/ProgressBarTheme"
                android:id="@+id/progressBar"
                tools:visibility="gone"/>


            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/btn_recover_sendEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_send"
                android:layout_marginTop="20dp"
                app:bootstrapSize="lg"
                app:buttonMode="regular"
                app:showOutline="false"
                app:roundedCorners="true" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/btn_recover_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_cancel"
                android:layout_marginTop="10dp"
                app:bootstrapSize="lg"
                app:bootstrapBrand="danger"
                app:buttonMode="regular"
                app:showOutline="false"
                app:roundedCorners="true" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>