<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorAccent"
    android:gravity="center">

    <ProgressBar
        android:layout_width="50dp"
        android:layout_height="50dp"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="visible"
        android:layout_gravity="center"
        android:theme="@style/ProgressBarTheme"
        android:id="@+id/progressBar" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/tv_profile_fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nome Completo"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="30dp"/>

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/edt_profile_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_email"
                android:inputType="textEmailAddress"
                android:layout_marginTop="30dp"
                app:bootstrapSize="md"
                app:bootstrapBrand="info"
                app:roundedCorners="true"/>

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/edt_profile_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_password"
                android:inputType="textPassword"
                android:layout_marginTop="10dp"
                app:bootstrapSize="md"
                app:bootstrapBrand="info"
                app:roundedCorners="true"/>

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/edt_profile_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_confirm_password"
                android:inputType="textPassword"
                android:layout_marginTop="10dp"
                app:bootstrapSize="md"
                app:bootstrapBrand="info"
                app:roundedCorners="true"/>

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/btn_profile_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Editar"
                android:layout_marginTop="30dp"
                app:bootstrapSize="lg"
                app:buttonMode="regular"
                app:showOutline="false"
                app:roundedCorners="true" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/btn_profile_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sair"
                android:layout_marginTop="10dp"
                app:bootstrapBrand="danger"
                app:bootstrapSize="lg"
                app:buttonMode="regular"
                app:showOutline="false"
                app:roundedCorners="true" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>