<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center"
    android:background="@color/colorAccent"
    android:layout_height="match_parent">

    <ProgressBar
        android:layout_width="50dp"
        android:layout_height="50dp"
        style="?android:attr/progressBarStyleLarge"
        android:layout_gravity="center"
        android:visibility="gone"
        android:theme="@style/ProgressBarTheme"
        android:id="@+id/progressBar"
        tools:visibility="visible" />

    <ScrollView
        android:id="@+id/scroll_details_movie"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:fillViewport="true"
        android:visibility="gone"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linear_image"
                android:orientation="vertical"
                android:scaleType="fitXY"
                android:background="@color/colorPrimary">

                <ImageView
                    android:id="@+id/iv_details_close"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_close"/>

                <ImageView
                    android:id="@+id/image_poster_movie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:background="@color/colorPrimary">

                <CheckBox
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/checkbox_favorite"
                    android:button="@drawable/checkbox_favorite_selector"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="-5dp"
                    android:layout_gravity="center"/>

                <CheckBox
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/checkbox_watched"
                    android:button="@drawable/checkbox_watched_selector"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="-5dp"
                    android:layout_gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_information"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-15dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical"
                android:background="@color/colorAccentLight">

                <TextView
                    android:id="@+id/label_movie_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_title"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="16sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_movie_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="movie_title"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/label_movie_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_release_date"
                    android:textColor="@color/colorPrimaryText"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_movie_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="movie_date"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/label_movie_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_language"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="16sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_movie_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="movie_language"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/label_movie_average"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_average"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="16sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tv_movie_average"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="movie_average"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/label_movie_popular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_popular"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="16sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_movie_popular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="movie_popular"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/label_movie_overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_sinopse"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="16sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_movie_overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="movie_sinopse"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>